<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:name="Context Menu" style="MyMenu">
    <!-- item android:id="@+id/search"
          android:title="@string/search_label"
          android:icon="@drawable/ic_menu_search" /> -->

	<item android:id="@+id/reset" android:title="@string/reset_label" style="menu_item"/>
    <item android:id="@+id/menuItemRefineBySubject" android:title="@string/menuItemRefineBySubject"  style="menu_item">
		<menu xmlns:android="http://schemas.android.com/apk/res/android" android:name="@string/menuItemRefineBySubject"  style="MyMenu">
			
		</menu>
	</item>
	
	<item android:id="@+id/menuItemRefineByCollection" android:title="@string/menuItemRefineByCollection"  style="menu_item">
		<menu xmlns:android="http://schemas.android.com/apk/res/android" android:name="@string/menuItemRefineByCollection"  style="MyMenu">
			
		</menu>
	</item>
	<item android:id="@+id/menuItemRefineByInitial" android:title="@string/menuItemRefineByInitial"  style="menu_item">
		<menu xmlns:android="http://schemas.android.com/apk/res/android" android:name="@string/menuItemRefineByInitial"  style="MyMenu">
			
		</menu>
	</item>
</menu>
